add site header and add img

--- a/index.html
+++ b/index.html
@@ -16,7 +16,32 @@
 </head>
 <body>
 
+    <header class="site-header">
+        <div class="site-header-container container">
+            <a class="site-header-logo" href="#">
+                <img src="img/logo-icon.png" alt="header-logo" width="50" height="50"
+                srcset="img/logo-icon.png 1x, img/logo-icon@2x.png 2x">
+                <span class="site-header-logo-text">AnsorMed</span>
+            </a>
+
+            <!-- SITENAV -->
+
+            <nav class="site-nav">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">XIZMATLAR</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">DORILAR</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">ASAL</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">KONTAKTLAR</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">BLOG</a></li>
+                </ul>
+            </nav>
+
+            <a class="main-link" href="#">QABULGA YOZILISH</a>
+
+        </div>
+    </header>
     
     
+
 </body>
 </html>
