add style, hover, active for header & sitenav

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <header class="site-header">
         <div class="site-header-container container">
-            <a class="site-header-logo" href="#">
-                <img src="img/logo-icon.png" alt="header-logo" width="50" height="50"
+            <a class="site-logo" href="#">
+                <img class="site-logo-img" src="img/logo-icon.png" alt="header-logo" width="50" height="50"
                 srcset="img/logo-icon.png 1x, img/logo-icon@2x.png 2x">
                 <span class="site-header-logo-text">AnsorMed</span>
             </a>
@@ -41,7 +41,7 @@
         </div>
     </header>
     
-    
+
 
 </body>
 </html>
