add site footer add border radius site logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <!-- SITENAV -->
 
-            <nav class="site-nav">
+            <nav class="sitenav">
                 <ul class="sitenav-list">
                     <li class="sitenav-item"><a class="sitenav-link" href="#">XIZMATLAR</a></li>
                     <li class="sitenav-item"><a class="sitenav-link" href="#">DORILAR</a></li>
@@ -42,6 +42,31 @@
     </header>
     
 
+
+    <!-- SITE FOOTER -->
+
+    <header class="site-footer">
+        <div class="site-footer-container container">
+            <a class="site-logo site-logo-footer" href="#">
+                <img class="site-logo-img" src="img/logo-icon.png" alt="header-logo" width="50" height="50"
+                srcset="img/logo-icon.png 1x, img/logo-icon@2x.png 2x">
+                <span class="site-header-logo-text">AnsorMed</span>
+            </a>
+
+            <!-- SITENAV -->
+
+            <nav class="site-nav sitenav-site-footer">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">XIZMATLAR</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">DORILAR</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">ASAL</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">KONTAKTLAR</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">BLOG</a></li>
+                </ul>
+            </nav>
+
+        </div>
+    </header>
 
 </body>
 </html>
