--- a/index.html
+++ b/index.html
@@ -59,6 +59,63 @@
     </main>
 
 
+    <!--   INDEX-SERVICES -->
+
+    <section class="index-services">
+        <div class="container">
+            <h2 class="index-services-heading">
+                Xizmatlar
+            </h2>
+                <ul class="index-services-list">
+
+                    
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="img/image-1.jpg" alt="hijoma" width="200" height="200" srcset="img/image-1.jpg 1x, img/image-1@2x.jpg 2x" >
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Hijoma</h3>
+                            <p class="index-service-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul class="index-services-list">
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="img/image-2.jpg" alt="terapiya" width="200" height="200" srcset="img/image-2.jpg 1x, img/image-2@2x.jpg 2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Manual terapiya</h3>
+                            <p class="index-service-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul class="index-services-list">
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="img/image-3.jpg" alt="zuluk" width="200" height="200" srcset="img/image-3.jpg 1x, img/image-3@2x.jpg 2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Zuluk bilan davolash</h3>
+                            <p class="index-service-discription">Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.</p>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul class="index-services-list">
+                    <li class="index-services-item index-service">
+                        <img class="index-service-img" src="img/image-4.jpg" alt="tabiiy" width="200" height="200" srcset="img/image-4.jpg 1x, img/image-4@2x.jpg 2x">
+                        <div class="index-service-content">
+                            <h3 class="index-service-title">Tabiiy dori vositalari</h3>
+                            <p class="index-service-discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.</p>
+                        </div>
+                    </li>
+                </ul>
+
+                <div class="index-services-actions">
+                    <a class="main-link" href="#">QABULGA YOZILISH</a>
+                </div>
+
+        </div>
+    </section>
+
+
     <!-- SITE FOOTER -->
 
     <header class="site-footer">
