add cta section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
 
-            <a class="main-link" href="#">QABULGA YOZILISH</a>
+            <a class="main-link" href="#index-cta">QABULGA YOZILISH</a>
 
         </div>
     </header>
@@ -49,7 +49,7 @@
                 <div class="hero-content">
                     <h2 class="hero-heading">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
                     <p>Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
-                    <a class="main-link main-link-solid" href="#" >QABULGA YOZILISH</a>
+                    <a class="main-link main-link-solid" href="#index-cta" >QABULGA YOZILISH</a>
                 </div>
 
                 <img class="hero-img" src="img/hero-img.png" alt="hero-img" width="423" height="504" srcset="img/hero-img.png 1x, img/hero-img@2x.png 2x">
@@ -109,9 +109,22 @@
                 </ul>
 
                 <div class="index-services-actions">
-                    <a class="main-link" href="#">QABULGA YOZILISH</a>
+                    <a class="main-link" href="#index-cta">QABULGA YOZILISH</a>
                 </div>
 
+        </div>
+    </section>
+
+    <!-- index cta -->
+
+
+    <section class="cta" id="index-cta">
+        <div class="container">
+            <h2 class="cta-heading">Qabulga ro’yxatdan o’ting</h2>
+        </div>
+        <div class="cta-links-item">
+            <a class="cta-links-item main-link main-link-outline" href="tel:+998901333344" target="_blank" >QO'NG'IROQ QILISH</a>
+            <a class="cta-links-item main-link main-link-outline" href="https://t.me/ansor_admin" target="_blank" >TELEGRAMDAN YOZISH</a>
         </div>
     </section>
 
